--- a/tester.html
+++ b/tester.html
@@ -1,3 +1,50 @@
-<h1>
-	tester
-</h1>
+<header class="header">
+			<div class="top clearfix">
+				<a href="#section8" class="available"><i class="ion-ios-email-outline"></i><span>Available For Freelance</span></a>
+				<div class="right-icons">
+					<a href="" class="open-search header-open-search"><i class="md md-search"></i></a>
+					<a href="" class="download"><i class="md md-file-download"></i></a>
+					<a href="" class="share"><i class="md md-more-vert"></i></a>
+				</div> <!-- end .right-icons -->
+				<!-- Popup -->
+				<div class="popup">
+					<nav class="social-nav">
+						<ul class="list-unstyled">
+							<li><a href="">Facebook</a></li>
+							<li><a href="">Twitter</a></li>
+							<li><a href="">Linkedin</a></li>
+							<li><a href="">Google+</a></li>
+							<li><a href="">Behance</a></li>
+						</ul> <!-- end .list-unstyled -->
+					</nav> <!-- end .social-nav -->
+				</div> <!-- end .popup -->
+			</div> <!-- end .top -->
+			<div class="bottom clearfix">
+				<div class="title"><a href="index.html">Dinda P.</a></div>
+				<div class="header-action-button-wrapper">
+					<a href="" class="header-action-button action-button"><i class="fa fa-plus"></i></a>
+				</div> <!-- end .header-action-button-wrapper -->
+				<a href="" class="responsive-menu-open">Menu <i class="fa fa-bars"></i></a>
+				<nav class="main-nav">
+					<ul class="list-unstyled">
+						<li class="active"><a href="#section1">Home</a></li>
+						<li><a href="#section2">About</a></li>
+						<li><a href="#section3">Skill</a></li>
+						<li><a href="#section4">Experience</a></li>
+						<li><a href="#section5">Education</a></li>
+						<li><a href="#section6">Work</a></li>
+						<li><a href="#section7">Blog</a></li>
+						<li><a href="#section8">Contact</a></li>
+					</ul>
+				</nav> <!-- end .main-nav -->
+			</div> <!-- end .bottom -->
+		</header> 
+
+h1>Designing with  <sub style="color: red">People</sub><sup>+</sup> <sub style="color: navy">Build</sub><sup>+</sup> with People</h1>
+								<h2>Hello, I’m Dinda. <br></h2>
+								<h3>Ive been designing and building the website and mobile product for the past 5 years. <br>
+								i'am full stack designer, and developer, also as good student. tends to create some other innovative ways to makes design not as <sup>bored things</sup>, and specializing in user experience,interaction design, visual design, and front-end development.
+
+								</h3>
+								
+								<p class="button-row"><a href="" class="button solid-button white">Hire Me Now</a><a href="" class="button solid-button purple">Download CV</a></p>
